# RayCastingCpp

./: CMakeLists.txt  camera.h  eigen_types.h  hit_record.h  main.cpp  math_utils.h  playground.cpp  ray.h  ray_intersection.h  renderer.h
src/: camera.cpp  ray_intersection.cpp  renderer.cpp
